--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,85 @@
-.App {
+export default App
+*{
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+
+}
+
+
+
+.App{
+  width: 100%;
+  height: 100%;
+  background: peachpuff;
+  display: grid;
+  grid-template-rows: 20em auto;
+
+}
+.menu{
+  display: grid;
+  place-items: center;
+}
+.menu.text{
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  gap: 0.5em;
 }
-
-.App-link {
-  color: #61dafb;
+.menu.text h1{
+  font-size: 3em;
+  letter-spacing: 3px;
 }
+.menu.text p{
+  font-weight: bold;
+  letter-spacing: 1px;
+}
+.menu.text input{
+  margin-top: 3em;
+  padding: .7em 1em;
+  border: solid 1px transparent;
+  border-radius: 20px;
+  box-shadow: 0 0 5px chocolate;
+  outline: none;
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+}
+.container{
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  gap: 1em;
+  padding: 1em;
+}
+.card{
+  background-color: cornsilk;
+  border-radius: 20px;
+  padding: 1em;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  gap: 1em;
+
+}
+.emo{
+  font-size: 3em;
+}
+@media(min-width: 600px) {
+  .container{
+    width: 70%;
+    margin-inline: auto;
   }
-  to {
-    transform: rotate(360deg);
-  }
+}
+.search{
+  all: unset;
+  margin-left: 2em;
+  margin-top: -3.3em;
+  padding: .3em 1em;
+  background-color: cornsilk;
+
+  box-shadow: 0 0 5px chocolate;
+  border-radius: 20px;
+  cursor: pointer;
+  color: black;
+}
+.search.text{
+  font-size: .6em;
 }
