--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,7 @@
 body {
+  /*background: linear-gradient(to bottom right,indigo, darkblue, blue, deepskyblue, white);*/
+  background-image: url("BackToTree.png");
+  background-attachment: fixed;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -7,7 +10,65 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+.welcome{
+  border-radius: 30px;
+  background-color: white;
+  width: 60%;
+  margin: auto;
+  height: 600px;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+.HatMenu{
+  display: flex;
+  margin-left: 450px;
+  margin-top: 17px;
+}
+
+.HatName{
+  margin-top: 15px;
+  margin-left: 50px;
+  color: white;
+  display: inline-block;
+}
+.MenuNames{
+  background-color: forestgreen;
+  color: white;
+  margin-left: 30px;
+  border: none;
+  font-size: 20px;
+  height: 30px;
+  transition: 0.5s linear;
+}
+.MenuNames:hover{
+  background-color: white;
+  color: forestgreen;
+}
+.info{
+  height: 20000px;
+  width: 40%;
+  border-radius: 20px;
+  background: aliceblue;
+  margin-left: 5%;
+  display: inline-block;
+}
+.graph{
+  height: 600px;
+  width: 50%;
+  border-radius: 20px;
+  background: aliceblue;
+  margin-right: 1%;
+  float:right
+}
+.hat{
+  display: flex;
+  position: sticky;
+  top: 0;
+  background-color: forestgreen;
+  width: 100%;
+  margin-top: auto;
+  height: 60px;
 }
