--- a/src/Navbar/Navbar.css
+++ b/src/Navbar/Navbar.css
@@ -11,20 +11,32 @@
     background-image: url("Resourses/WhiteIcoSign.svg");
     background-color: forestgreen;
     border: none;
+    border-radius: 7px;
     background-position: center;
-    width: 20px;
+    width: 85px;
     height: 45px;
-    transition: 0.5s linear;
-    margin-left: 70px;
+    padding: 0 1rem;
+    transition: 0.2s linear;
+    margin-left: 10%;
 }
-.button-icon:hover{
+.button-icon-cabinet:hover{
     background-image: url("Resourses/GreenIcoSign.svg");
-    background-color: white;
+    background-color: greenyellow;
 }
 
-.button-icon-currency{
-
+.button-home{
+    background-image: url("Resourses/money-tree-picture.svg");
+    background-position: left center;
+    background-repeat: no-repeat;
+    width: 10%;
+    height: 80%;
+    display: flex;
+    margin-top: auto;
+    margin-left: -23%;
+    margin-bottom: auto;
+    padding-left: 7%;
 }
+
 
 .HatMenu{
     display: flex;
@@ -33,22 +45,26 @@
 }
 
 .HatName{
-    margin-top: 15px;
-    margin-left: 50px;
-    color: white;
-    display: inline-block;
+    display: flex;
+    align-items: center;
+    margin-right: 24px;
+    margin-left: 400px;
 }
 .MenuNames{
     background-color: forestgreen;
     color: white;
-    margin-left: 30px;
+
     border: none;
+    text-align: center;
+    padding: 0 1rem;
     font-size: 20px;
     height: 15px;
-    transition: 0.5s linear;
+    transition: 0.2s linear;
+
 }
 .MenuNames:hover{
-    background-color: white;
+    height: 100%;
+    background-color: greenyellow;
     color: forestgreen;
 }
 .info{
